--- a/.github/workflows/appwright-test.yml
+++ b/.github/workflows/appwright-test.yml
@@ -11,6 +11,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: qualcli
+          POSTGRES_USER: postgres
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -22,7 +23,7 @@ jobs:
       redis:
         image: redis:7
         options: >-
-          --health-cmd "redis-cli ping"
+          --health-cmd "redis-server --version"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -36,6 +37,11 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y postgresql-client redis-tools
     
     - name: Install dependencies
       run: |
@@ -47,7 +53,23 @@ jobs:
       run: |
         echo "DATABASE_URL=postgresql://postgres:postgres@localhost:5433/qualcli" >> $GITHUB_ENV
         echo "API_URL=http://localhost:8002" >> $GITHUB_ENV
-    
+
+    - name: Wait for services to be ready
+      run: |
+        echo "Waiting for PostgreSQL..."
+        until pg_isready -h localhost -p 5433 -U postgres; do
+          echo "PostgreSQL not ready, waiting..."
+          sleep 2
+        done
+        echo "PostgreSQL is ready!"
+        
+        echo "Waiting for Redis..."
+        until redis-cli -h localhost -p 6379 ping | grep -q PONG; do
+          echo "Redis not ready, waiting..."
+          sleep 2
+        done
+        echo "Redis is ready!"
+
     - name: Initialize database
       run: |
         python scripts/init_db.py
@@ -65,7 +87,17 @@ jobs:
     
     - name: Verify services are running
       run: |
-        curl -f http://localhost:8002/health || exit 1
+        # Check backend health
+        for i in {1..10}; do
+          if curl -f http://localhost:8002/health; then
+            echo "Backend is healthy!"
+            break
+          fi
+          echo "Waiting for backend health check ($i/10)..."
+          sleep 3
+        done
+        
+        # Test CLI commands
         qgjob devices list || exit 1
     
     - name: Submit test jobs
