--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     services:
       redis:
-        image: redis
+        image: redis:7
+        options: >-
+          --health-cmd "redis-server --version"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - 6379:6379
       postgres:
-        image: postgres:latest
+        image: postgres:13
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -31,6 +36,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client redis-tools
 
       - name: Install dependencies
         run: |
@@ -53,16 +63,24 @@ jobs:
 
       - name: Wait for services to be ready
         run: |
-          # Wait for PostgreSQL
+          echo "Waiting for PostgreSQL..."
           until pg_isready -h localhost -p 5433 -U postgres; do
-            echo "Waiting for PostgreSQL..."
+            echo "PostgreSQL not ready, waiting..."
             sleep 2
           done
-          # Wait for Redis
-          until redis-cli -p 6379 ping; do
-            echo "Waiting for Redis..."
+          echo "PostgreSQL is ready!"
+          
+          echo "Waiting for Redis..."
+          until redis-cli -h localhost -p 6379 ping | grep -q PONG; do
+            echo "Redis not ready, waiting..."
             sleep 2
           done
+          echo "Redis is ready!"
+
+      - name: Initialize database
+        run: |
+          python scripts/init_db.py
+          python scripts/init_devices.py
 
       - name: Start backend server
         run: |
@@ -73,7 +91,7 @@ jobs:
         run: |
           # Wait for backend to respond
           for i in {1..30}; do
-            if curl -f http://localhost:8002/docs >/dev/null 2>&1; then
+            if curl -f http://localhost:8002/health >/dev/null 2>&1; then
               echo "Backend is responding"
               break
             fi
@@ -97,7 +115,7 @@ jobs:
           echo "Polling job $JOB_ID for completion..."
           
           for i in {1..60}; do
-            qgjob status --job-id=$JOB_ID > status_output.txt
+            qgjob status job --job-id=$JOB_ID > status_output.txt
             STATUS=$(grep "Status:" status_output.txt | awk '{print $NF}')
             echo "Job status: $STATUS (check $i/60)"
             
