--- a/.github/workflows/appwright-test.yml
+++ b/.github/workflows/appwright-test.yml
@@ -38,6 +38,11 @@ jobs:
       with:
         python-version: '3.10'
 
+    - name: Create required directories
+      run: |
+        mkdir -p logs
+        mkdir -p builds
+
     - name: Install system dependencies
       run: |
         sudo apt-get update
