--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,12 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Create required directories
+        run: |
+          mkdir -p logs
+          mkdir -p builds
+          mkdir -p tests/onboarding
+
       - name: Install system dependencies
         run: |
           sudo apt-get update
@@ -53,7 +59,6 @@ jobs:
 
       - name: Create test file
         run: |
-          mkdir -p tests/onboarding
           echo 'console.log("Sample test");' > tests/onboarding/login.spec.js
 
       - name: Set environment variables
