--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,20 +42,31 @@ jobs:
       with:
         node-version: '18'
 
+    - name: Create required directories
+      run: |
+        mkdir -p logs
+        mkdir -p builds
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -e .  # Install package in development mode
         npm install
 
-    - name: Initialize database
-      run: python scripts/init_db.py
-
-    - name: Start Celery worker
+    - name: Start backend services
       env:
         BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
         BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
       run: |
+        # Initialize database
+        python scripts/init_db.py
+        
+        # Start FastAPI server
+        uvicorn backend.main:app --host 0.0.0.0 --port 8002 &
+        sleep 5  # Wait for server to start
+        
+        # Start Celery worker
         celery -A backend.queue.celery_app worker -l info &
         sleep 5  # Wait for worker to start
 
