--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
         condition: service_healthy
     volumes:
       - ./logs:/app/logs
+      - ./builds:/app/builds
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
       interval: 30s
@@ -65,6 +66,7 @@ services:
         condition: service_healthy
     volumes:
       - ./logs:/app/logs
+      - ./builds:/app/builds
     restart: unless-stopped
 
   worker-normal:
@@ -81,6 +83,7 @@ services:
         condition: service_healthy
     volumes:
       - ./logs:/app/logs
+      - ./builds:/app/builds
     restart: unless-stopped
 
   worker-low:
@@ -97,6 +100,7 @@ services:
         condition: service_healthy
     volumes:
       - ./logs:/app/logs
+      - ./builds:/app/builds
     restart: unless-stopped
 
   flower:
